# 2026-project-code-repository-WellPENGuin987

./: .gitignore  ANGULAR_MOMENTUM_ARCHITECTURE.md  ANGULAR_MOMENTUM_IMPLEMENTATION.md  ANGULAR_MOMENTUM_PHYSICS.md  ANGULAR_MOMENTUM_QUICKREF.md  ANGULAR_MOMENTUM_USAGE.md  README.md  pyproject.toml
doc/project-file-guides/: Assets-and-Folders.md  Distributions.md  Graphs.md  Initialiser.md  Interface.md  Particles.md  README.md  Simulation.md
project/: Distributions.py  Graphs.py  Initialiser.py  Interface.py  Particles.py  Simulation.py
project/initialisation_files/: atmosphere_1000_sea_level_gradient.txt  atmosphere_6000_sea_level_gradient.txt  test_initialisation_saved.txt  water and N2.txt  water.txt
