[project]
name = "project"
version = "0.1.0"
description = "Particle simulation project for Phys389"
authors = [
    {name = "WellPENGuin987", email = "your.email@example.com"},
]
dependencies = [
    "sympy",
    "numpy",
    "scipy",
    "matplotlib",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 180
exclude = [".venv", "build", "dist", "docs"]

[tool.ruff.lint]
# Enable commonly useful rules and error categories. Adjust as needed.
select = ["E", "F", "W", "C90", "I"]
per-file-ignores = { "__init__.py" = ["F401"] }
